tests/paczka1/small_fuzzy/62468871.err
Error in line 2: IXbMD A423 35,4
Error in line 12: qxddNrKsVAb A210 12,9
Error in line 11: 6Wj A881 4,4
